Fixing wording and spacing of unentitled (#340)
* added margin and fixed wording

* switched to pf variable

--- a/src/routes/Landing.scss
+++ b/src/routes/Landing.scss
@@ -86,6 +86,7 @@ sup.ins-c-rball { @include rem('font-size', 10px); }
         justify-content: center;
         text-align: center;
         &--body { width: 75%; }
+        &--footer-secondary { margin-top: var(--pf-global--spacer--sm);}
     }
 }
 
